--- a/css/global.css
+++ b/css/global.css
@@ -37,7 +37,7 @@ body {
 a {
     text-decoration: none;
     cursor: pointer;
-    color: #94c13d;
+    color: #018b06;
 }
 
 .no-padding {
@@ -161,7 +161,7 @@ li {
 }
 
 .theme-bg {
-    background-color: #94c13d !important;
+    background-color: #018b06 !important;
 }
 
 .bg-style-two {
@@ -223,7 +223,7 @@ li {
 }
 
 .theme-color {
-    color: #94c13d;
+    color: #018b06;
 }
 
 img {
@@ -259,7 +259,7 @@ img {
     color: #fff;
     text-align: center;
     cursor: pointer;
-    background: #94c13d;
+    background: #018b06;
     -webkit-animation: pulse 2s infinite;
     -o-animation: pulse 2s infinite;
     animation: pulse 2s infinite;
@@ -396,7 +396,7 @@ img {
 
 .ui-state-active,
 .ui-widget-content .ui-state-active {
-    background-color: #94c13d;
+    background-color: #018b06;
 }
 
 .ui-menu .ui-menu-item-wrapper {
@@ -436,7 +436,7 @@ img {
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    border: 1px solid #94c13d;
+    border: 1px solid #018b06;
     transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -webkit-transition: all 0.3s ease;
@@ -446,8 +446,8 @@ img {
 
 .owl-dot-style-one .owl-dots .owl-dot.active span,
 .owl-dot-style-one .owl-dots .owl-dot:hover span {
-    background: #94c13d;
-    border-color: #94c13d;
+    background: #018b06;
+    border-color: #018b06;
 }
 
 /* style two */
@@ -491,8 +491,8 @@ img {
 
 .owl-dot-style-two .owl-dots .owl-dot.active span,
 .owl-dot-style-two .owl-dots .owl-dot:hover span {
-    background: #94c13d;
-    border-color: #94c13d;
+    background: #018b06;
+    border-color: #018b06;
 }
 
 /* owl nav */
@@ -542,8 +542,8 @@ img {
 
 .owl-nav-style-one .owl-nav .owl-next:hover,
 .owl-nav-style-one .owl-nav .owl-prev:hover {
-    color: #94c13d;
-    border-color: #94c13d;
+    color: #018b06;
+    border-color: #018b06;
 }
 
 /* nav style tow */
@@ -593,8 +593,8 @@ img {
 
 .owl-nav-style-two .owl-nav .owl-next:hover,
 .owl-nav-style-two .owl-nav .owl-prev:hover {
-    color: #94c13d;
-    border-color: #94c13d;
+    color: #018b06;
+    border-color: #018b06;
 }
 
 /*** Fancy Box ***/
